--- a/.github/workflows/main_rent-wyse-backend.yml
+++ b/.github/workflows/main_rent-wyse-backend.yml
@@ -1,12 +1,16 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - rent-wyse-backend
+name: Build and deploy Node.js backend to Azure Web App - rent-wyse-backend
 
 on:
   push:
     branches:
       - main
+    # Only run this workflow when backend or this workflow file changes
+    paths:
+      - 'rentwyse-backend/**'
+      - '.github/workflows/main_rent-wyse-backend.yml'
   workflow_dispatch:
 
 jobs:
@@ -23,7 +27,8 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build, and test (backend)
+        working-directory: ./rentwyse-backend
         run: |
           npm install
           npm run build --if-present
@@ -32,8 +37,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: backend-app
+          path: ./rentwyse-backend
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,7 +51,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: backend-app
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -55,11 +60,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2FE1410E553440A798C60A2830CFA0B9 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7CB6D3E1ACBC4AC195AC9A04D0288070 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'rent-wyse-backend'
           slot-name: 'Production'
-          package: .
-          
+          package: ./rentwyse-backend
