--- a/rentwyse-backend/package.json
+++ b/rentwyse-backend/package.json
@@ -4,14 +4,15 @@
   "description": "Turning Broke into a Joke!\" 😄🏠💰 #RentingRocks",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",      
-    "dev": "nodemon server.js",     
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
