--- a/rentwyse-frontend/package.json
+++ b/rentwyse-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^16.2.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
+    "@angular/google-maps": "^16.2.0",
     "@angular/material": "^16.2.10",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
@@ -37,7 +38,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@angular/localize": "^16.2.0",
-    "@types/googlemaps": "^3.43.3",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~4.3.0",
     "@types/paypal-checkout-components": "^4.0.8",
     "jasmine-core": "~4.6.0",
